--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zinsen-ui",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "prestart": "npm run generate:openapi",
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@saithodev/ts-appversion": "^2.2.0",
     "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.1",
