--- a/.github/workflows/main_zinsen-ui.yml
+++ b/.github/workflows/main_zinsen-ui.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - Zinsen-UI App
+name: Build and deploy Node.js app to Azure Web App - zinsen-ui
 
 on:
   push:
@@ -24,14 +24,13 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-        working-directory: .
+          npm run build --prod
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: zinsen-ui-app
-          path: ./dist/zinsen-ui-app
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,7 +49,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'Zinsen-UI'
+          app-name: 'Zinsen-Ui'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_976F48C2BFFF43449E7032EE3651172C }}
-          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_ACD20CFEEA1C42EF9681C422D2D7FE6B }}
+          package: ./dist/zinsen-ui-app
