--- a/.github/workflows/main_zinsen-ui.yml
+++ b/.github/workflows/main_zinsen-ui.yml
@@ -26,6 +26,9 @@ jobs:
           npm install
           npm run build --prod
 
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
@@ -45,6 +48,9 @@ jobs:
         with:
           name: zinsen-ui
           expire-in: 0 # Setting this to 0 will delete all artifacts
+
+      - name: unzip artifact for deployment
+        run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
