--- a/.github/workflows/main_zinsen-ui.yml
+++ b/.github/workflows/main_zinsen-ui.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: zinsen-ui
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
