--- a/.github/workflows/main_zinsen-ui.yml
+++ b/.github/workflows/main_zinsen-ui.yml
@@ -43,7 +43,7 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact from build jobx
         uses: actions/download-artifact@v2
         with:
           name: zinsen-ui
